# record-program-with-multisig

./: Cargo.toml
client/: Cargo.toml
multisig/: Cargo.toml  README.md  bsbf
multisig/src/: config.rs  instructions.rs  proposal.rs
multisig/tests/: multisig.rs
program/: Cargo.toml  README.md
program/src/: instruction.rs  lib.rs  processor.rs
program/src/multisig/: config.rs  instructions.rs  mod.rs  proposal.rs
program/tests/: functional.rs  multisig.rs
