[package]
name = "multisig"
version = "0.1.0"
description = "Multisignature program for access control to instructions"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bytemuck = { version = "1.23.1", features = ["derive"] }
solana-account-info = "2.3.0"
solana-program-error = "2.2.2"
solana-program-pack = "2.2.1"
solana-msg = "2.2.1"
solana-pubkey = { version = "2.4.0", features = ["bytemuck"] }

[dev-dependencies]
all2all_controller = { version = "0.3.0", path = "../program" }
solana-program-test = "2.2.19"
solana-system-interface = "1.0.0"
solana-sdk = "2.2.1"

[lints]
workspace = true